--- a/mod.conf
+++ b/mod.conf
@@ -1,4 +1,4 @@
-name = walking_light
+name = wlight
 description = Adds items that will illuminate area around player when wielded or equipped.
 author = Echo, petermaloney, Jordan Irwin (AntumDeluge)
-optional_depends = default
+optional_depends = default, walking_light
