--- a/mod.conf
+++ b/mod.conf
@@ -1,4 +1,5 @@
 name = wlight
 description = Adds items that will illuminate area around player when wielded or equipped.
+version = 1.0
 author = Echo, petermaloney, Jordan Irwin (AntumDeluge)
 optional_depends = default, walking_light
